@startuml Sist_Notificaciones
interface Notificacion {
    +enviar(mensaje: String): void
}

class NotificacionEmail {
    +enviar(mensaje: String): void
}

class NotificacionSMS {
    +enviar(mensaje: String): void
}

class NotificacionPush {
    +enviar(mensaje: String): void
}

class FabricaNotificaciones {
    +crear_notificacion(tipo: String): Notificacion
}

Notificacion <|.. NotificacionEmail
Notificacion <|.. NotificacionSMS
Notificacion <|.. NotificacionPush

FabricaNotificaciones ..> Notificacion : crea

@enduml